--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,19 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+################################################
+##################### DURI #####################
+################################################
+*.class
+target
+*.settings
+*.classpath
+*.springbeans
+*.project
+*.springwebflow
+*.idea
+*.iml
+dist
+TODO
+bin
